# ferro-stash

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSES.md  README.md  RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_1.0.0.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  release.yml
bench/: README.md  ferrostash_bench.conf  gen_input.py  logstash_bench.conf  logstash_generator_bench.conf  logstash_jvm.options  run_bench.sh  run_comparison.sh  setup_logstash.sh
bench/configs/: custom_ruby.fs.conf  custom_script.fs.conf  filter_csv.fs.conf  filter_dissect.fs.conf  filter_grok.fs.conf  filter_json.ls.conf  filter_kv.fs.conf  native.fs.conf
bench/data/: uuid
config/: bench.conf  elasticsearch.conf  example.conf  example.yml
crates/ferro-script/: Cargo.toml
crates/ferro-script/src/: error.rs  evaluator.rs  jit.rs  lib.rs  parser.rs  types.rs
crates/ferro-stash-cli/: Cargo.toml  build.rs
crates/ferro-stash-cli/src/: api.rs  main.rs  marketplace.rs
crates/ferro-stash-codec/: Cargo.toml
crates/ferro-stash-codec/benches/: codec_bench.rs
crates/ferro-stash-codec/src/: avro.rs  bytes_codec.rs  cef.rs  cloudfront.rs  cloudtrail.rs  collectd.rs  csv_codec.rs  dots.rs  edn.rs  es_bulk.rs  fluent.rs  graphite.rs  json.rs  lib.rs  msgpack.rs  multiline.rs  netflow.rs  nmap.rs  plain.rs  protobuf.rs  rubydebug.rs  script.rs
crates/ferro-stash-codec/tests/: regression_avro_decode_offset_underflow.rs  regression_edn_decode_recursion_hot_loop.rs
crates/ferro-stash-config/: Cargo.toml
crates/ferro-stash-config/benches/: config_bench.rs
crates/ferro-stash-config/src/: lib.rs  logstash_dsl.rs  model.rs  yaml_config.rs
crates/ferro-stash-core/: Cargo.toml
crates/ferro-stash-core/benches/: event_bench.rs  pipeline_bench.rs  pq_bench.rs
crates/ferro-stash-core/src/: buffer.rs  condition.rs  dead_letter_queue.rs  error.rs  event.rs  field_ref.rs  lib.rs  metrics.rs  monitoring.rs  multi_pipeline.rs  persistent_queue.rs  pipeline.rs  plugin.rs  redact.rs  settings_helpers.rs  shutdown.rs
crates/ferro-stash-e2e/: Cargo.toml
crates/ferro-stash-e2e/src/: lib.rs
crates/ferro-stash-filter/: Cargo.toml
crates/ferro-stash-filter/benches/: filter_bench.rs
crates/ferro-stash-filter/src/: aggregate.rs  anonymize.rs  bytes_filter.rs  cidr.rs  clone_filter.rs  csv_filter.rs  date.rs  de_dot.rs  dissect.rs  dns.rs  drop.rs  elasticsearch_filter.rs  fingerprint.rs  geoip.rs  grok.rs  http_filter.rs  jdbc_static.rs  jdbc_streaming.rs  json_encode.rs  json_filter.rs  kv.rs  lib.rs  memcached.rs  metrics.rs  mutate.rs  prune.rs  ruby.rs  script.rs  sleep_filter.rs  split_filter.rs  syslog_pri.rs  throttle.rs  translate.rs  truncate.rs  urldecode.rs  useragent.rs  uuid_filter.rs  xml.rs
crates/ferro-stash-input/: Cargo.toml
crates/ferro-stash-input/src/: beats.rs  cloudwatch.rs  codec_config.rs  dead_letter_queue.rs  elasticsearch.rs  exec.rs  file.rs  gelf.rs  generator.rs  graphite.rs  heartbeat.rs  http.rs  http_poller.rs  jdbc.rs  kafka.rs  lib.rs  pipe.rs  pipeline.rs  rabbitmq.rs  redis.rs  s3.rs  sqs.rs  stdin.rs  syslog.rs  tcp.rs  udp.rs  unix.rs
crates/ferro-stash-output/: Cargo.toml
crates/ferro-stash-output/src/: cloudwatch.rs  csv.rs  datadog.rs  elasticsearch.rs  email.rs  file.rs  graphite.rs  http.rs  jdbc.rs  kafka.rs  lib.rs  null.rs  pipe.rs  pipeline.rs  rabbitmq.rs  redis.rs  s3.rs  sns.rs  sqs.rs  stdout.rs  tcp.rs  udp.rs
crates/ferro-stash-ruby/: Cargo.toml
crates/ferro-stash-ruby/src/: event_bridge.rb  event_bridge.rs  lib.rs  runtime.rs
deploy/: README.md  marketplace-ami.sh  marketplace-container.sh  marketplace-create.sh  marketplace-pricing.sh  marketplace-release.sh
deploy/helm/ferro-stash/: .helmignore  Chart.yaml  values.yaml
deploy/systemd/: ferro-stash.service
docs/: ARCHITECTURE.md  CI_PERFORMANCE.md  COMPATIBILITY.md  CONTRIBUTING.md  SECURITY.md  aws-benchmarks.md  code-quality-report.md  onboarding.md
docs/archive/: CHANGELOG-2026-04-16-superseded.md  README.md
docs/marketplace/: LISTING.md  SUBMISSION_CHECKLIST.md
fuzz/: .gitignore  Cargo.toml  triage-2026-05-07.md
fuzz/corpus/codec_decode/: regression-avro-len-overflow-36b-2026-05-02  regression-avro-len-overflow-47b-2026-05-03  regression-avro-offset-underflow-line188-2026-05-03  regression-edn-brace-stew-1059b-2026-05-19-b216efbb  regression-edn-hot-loop-2026-05-03-45ca6cbb  regression-edn-hot-loop-2026-05-03-946cc5ce  regression-edn-hot-loop-2026-05-03-cc6b8c35  regression-protobuf-len-overflow-2026-05-02
fuzz/corpus/logstash_dsl_parse/: regression-dsl-char-boundary-2026-05-02
fuzz/fuzz_targets/: cef_decode.rs  codec_decode.rs  logstash_dsl_parse.rs  netflow_decode.rs
marketplace/assets/: make_logo.py
marketplace/docker/: Dockerfile.marketplace  README.md  pipeline.conf
marketplace/helm/ferro-stash-helm/: Chart.yaml  values.yaml
marketplace/packer/: Cross.toml  README.md  build.sh  ferro-stash.pkr.hcl  manifest.json  variables.pkr.hcl
marketplace/packer/files/: ferro-stash.service  firstboot-systemd.service  pipeline.conf
marketplace/packer/scripts/: 00-install-deps.sh  10-create-ferrostash-user.sh  20-install-binaries.sh  30-install-config.sh  40-install-systemd-units.sh  50-firstboot.sh  60-harden.sh  90-marketplace-finalise.sh
marketplace/packer/tests/: lint.sh  structure.sh
tests/e2e/: compatibility_test.rs  logstash_compat_test.rs  logstash_docker_compat_test.rs
tests/e2e/expected_output/: basic_passthrough.json  conditional_routing.json  dissect_csv.json  drop_prune.json  grok_advanced.json  grok_syslog.json  json_parse.json  kv_extraction.json  multi_filter_chain.json  (+3 more)
tests/logstash-compat/: README.md  docker-compose.yml  ec2_rebuild.sh  ec2_rebuild_and_test.sh  ec2_run_all_final.sh  ec2_run_e2e_v2.sh  ec2_run_logstash_e2e.sh  ec2_run_nohup.sh  ec2_run_single.sh  ec2_run_v3.sh  ec2_setup.sh  gen_expected.py  jruby_parity.py  run_smoke_tests.sh  runner.py  test_reload_port.sh
(+97 files in other folders)
