# SPDX-License-Identifier: Apache-2.0
[package]
name = "ferro-stash"
description = "High-performance Logstash-compatible data pipeline written in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "ferro-stash"
path = "src/main.rs"

[features]
default = []
# Build the `ruby` filter (embeds Artichoke mruby; needs clang/gcc + cmake).
# Off by default to keep the default binary light and toolchain-free.
ruby = ["ferro-stash-filter/ruby"]
# AWS Marketplace metered-container entitlement gate (RegisterUsage at startup).
# OFF by default: the OSS source build and the AMI build never include it. Only
# the PAID Marketplace CONTAINER image is built with `--features marketplace`.
marketplace = ["dep:aws-config", "dep:aws-sdk-marketplacemetering"]

[dependencies]
ferro-stash-core = { workspace = true }
ferro-stash-config = { workspace = true }
ferro-stash-input = { workspace = true }
ferro-stash-filter = { workspace = true }
ferro-stash-output = { workspace = true }
ferro-stash-codec = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
num_cpus = { workspace = true }
glob = { workspace = true }
hostname = { workspace = true }
uuid = { workspace = true }
notify = { workspace = true }
fs2 = "0.4"
socket2 = "0.5"
serde_yaml = { workspace = true }

# AWS Marketplace entitlement gate — only pulled in by the `marketplace` feature.
# Versions track the aws-config / aws-smithy generation already in the workspace
# (see crates/ferro-stash-{input,output}), so enabling the feature does not force
# a workspace-wide smithy bump.
aws-config = { version = "1.8.11", features = ["behavior-version-latest"], optional = true }
aws-sdk-marketplacemetering = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
