# SPDX-License-Identifier: Apache-2.0
[package]
name = "ferro-stash-codec"
description = "Codec plugins for FerroStash (json, plain, multiline, csv)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ferro-stash-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }
csv = { workspace = true }
memchr = { workspace = true }
rmp-serde = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
criterion = { workspace = true }

[[bench]]
name = "codec_bench"
harness = false

[lints]
workspace = true
