# SPDX-License-Identifier: Apache-2.0
[package]
name = "ferro-stash-config"
description = "Configuration parser for FerroStash (Logstash DSL + YAML)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ferro-stash-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
indexmap = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
criterion = { workspace = true }

[[bench]]
name = "config_bench"
harness = false

[lints]
workspace = true
