# SPDX-License-Identifier: Apache-2.0
[package]
name = "ferro-stash-filter"
description = "Filter plugins for FerroStash"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
default = []
# The `ruby` filter embeds the Artichoke mruby interpreter (pulled as a git
# dependency, requires clang/gcc + cmake). Off by default so the common build
# stays light and a fresh clone builds without the heavy native toolchain.
ruby = ["dep:ferro-stash-ruby"]

[dependencies]
ferro-stash-core = { workspace = true }
ferro-stash-ruby = { workspace = true, optional = true }
ferro-script = { path = "../ferro-script" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
# onig removed — using regex crate for grok patterns
chrono = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }
base64 = { workspace = true }
memchr = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
percent-encoding = { workspace = true }
csv = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
md5 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
maxminddb = "0.28.1"
hickory-resolver = "0.26.1"
# Synchronous memcached client (driven via spawn_blocking); default-features off
# to drop the OpenSSL `tls` feature and stay rustls-only / plaintext memcached.
memcache = { version = "0.19", default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
criterion = { workspace = true }

[[bench]]
name = "filter_bench"
harness = false

[lints]
workspace = true
