# SPDX-License-Identifier: Apache-2.0
[package]
name = "ferro-stash-input"
description = "Input plugins for FerroStash"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ferro-stash-core = { workspace = true }
ferro-stash-codec = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
notify = { workspace = true }
glob = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
url = { workspace = true }
async-trait = "0.1"
hostname = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
rdkafka = { version = "0.39.0", features = ["cmake-build", "tokio"] }
redis = { version = "0.32.2", features = ["tokio-comp", "connection-manager"] }
aws-config = { version = "1.8.11", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.29.0"
aws-sdk-sqs = "1.40"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"

[lints]
workspace = true
