# SPDX-License-Identifier: Apache-2.0
[package]
name = "ferro-stash-output"
description = "Output plugins for FerroStash"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ferro-stash-core = { workspace = true }
ferro-stash-codec = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
flate2 = { workspace = true }
base64 = { workspace = true }
percent-encoding = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
axum = { workspace = true }

[lints]
workspace = true
